<resources>
    <string name="app_name">HuabaoDemo</string>
    <string name="str_scan">扫描</string>
    <string name="str_stop_scan">停止扫描</string>
    <string name="str_device_list">设备列表</string>
    <string name="str_ble_not_open">蓝牙未打开</string>
    <string name="str_open_ble">请打开蓝牙相关权限</string>
    <string name="str_open_permission">请打开定位权限，否则无法扫描到设备</string>
    <string name="str_open_location_switch">请打开定位开关</string>
    <string name="device_mac_hint">设备地址：</string>
    <string name="connect_status">连接状态</string>
    <string name="str_connect">连接</string>
    <string name="str_connect_bt">连接 BT</string>
    <string name="str_bond">配对</string>
    <string name="str_connect_more">连接-多设备</string>
    <string name="str_connect_more_11">连接-多设备-切换A</string>
    <string name="str_connect_more_device">多设备-列表</string>
    <string name="str_connect_more_now">多设备-当前</string>
    <string name="str_disconnect">断开连接</string>
    <string name="str_connecting">连接中</string>
    <string name="str_bing_success">绑定成功</string>
    <string name="str_bing_fail">绑定成功</string>
    <string name="str_connected">已连接</string>
    <string name="str_disconnected">已断开</string>
    <string name="str_clear_show">清除显示内容</string>
    <string name="str_bind_device">绑定设备</string>
    <string name="str_unbind_device">解绑</string>
    <string name="str_get_watch_info">获取设备信息</string>
    <string name="str_get_battery">获取电量</string>
    <string name="str_reset">恢复出厂设置</string>
    <string name="str_set_time">设置时间</string>
    <string name="str_set_time_foramte12">设置12小时制</string>
    <string name="str_set_time_foramte24">设置24小时制</string>
    <string name="str_open_ligth">打开抬腕亮屏</string>
    <string name="str_close_light">关闭抬腕亮屏</string>
    <string name="str_set_long_sit">设置久坐提醒</string>
    <string name="str_set_regular_remind">设置常规提醒</string>
    <string name="str_set_women_health">设置女性健康</string>
    <string name="str_set_no_disturb">设置勿扰模式</string>
    <string name="str_set_hr_monitor">设置心率监测</string>
    <string name="str_set_message">消息相关</string>
    <string name="str_set_weather">设置天气</string>
    <string name="str_set_gps">发送GPS位置数据</string>
    <string name="str_set_dial_option">表盘相关操作</string>
    <string name="str_sync_data">同步数据</string>
    <string name="str_get_realtime_data">获取实时每日活动数据</string>
    <string name="str_stop_realtime_data">停止获取实时数据</string>
    <string name="str_query_daily_sum">查询每日汇总数据</string>
    <string name="str_query_daily_hr">查询每日心率数据</string>
    <string name="str_query_sleep_sum">查询睡眠统计数据</string>
    <string name="str_query_sport_data">查询运动数据</string>
    <string name="str_query_reset_hr">查询静息心率</string>
    <string name="str_query_op">查询血氧数据</string>
    <string name="str_query_sport_mode">查询运动模式数据</string>
    <string name="str_query_sport_hr">查询运动心率</string>
    <string name="str_query_sleep_data">查询睡眠状态数据</string>
    <string name="str_remind">日程提醒</string>
    <string name="str_alarm">闹钟提醒</string>
    <string name="bind_device_success">绑定设备成功</string>
    <string name="bind_device_fail">绑定设备失败</string>
    <string name="str_back">返回</string>
    <string name="str_is_open">是否打开</string>
    <string name="str_start_hour">开始小时（0-23）</string>
    <string name="str_start_min">开始分钟（0-59）</string>
    <string name="str_end_hour">结束小时（0-23）</string>
    <string name="str_end_min">结束分钟（0-59）</string>
    <string name="str_long_sit_hint">多少分钟不活动开始算久坐状态</string>
    <string name="str_long_step_hint">久坐与否判断标准-步数</string>
    <string name="str_long_remind">进入久坐状态后多少分钟提醒一次</string>
    <string name="str_long_count">进入久坐状态后一共提醒多少次</string>
    <string name="str_set">设置</string>
    <string name="str_remind_type_hint">提醒项, 1:喝水 2:洗手</string>
    <string name="str_remind_interval_hint">间隔多少秒提醒一次</string>
    <string name="str_women_set_hint1">月经提前提醒天数</string>
    <string name="str_women_set_hint2">排卵提前提醒天数</string>
    <string name="str_women_set_hint3">提醒时间-小时, 0-23</string>
    <string name="str_women_set_hint4">提醒时间-分钟, 0-59</string>
    <string name="str_women_set_hint5">上一次月经年,基于2000年的增量年数</string>
    <string name="str_women_set_hint6">上一次月经月, 1-12</string>
    <string name="str_women_set_hint7">上一次月经日, 1-31</string>
    <string name="str_women_set_hint8">经期天数</string>
    <string name="str_women_set_hint9">月经周期天数</string>
    <string name="str_hr_monitor_hint">非运动模式心率提醒极限值, 为0表示取消提醒</string>
    <string name="str_hr_monitor_hint1">非运动模式心率提醒最小值, 为0表示取消提醒</string>
    <string name="str_hr_monitor_hint2">非运动模式心率自动测量的采样间隔时间(秒), \n为-1表示不自 动测量</string>
    <string name="str_hr_monitor_hint3">非运动模式心率自动测量时的数据保存阀值, \n通常是90-140 的范围, 表示除了定时采样外,\n如果每10秒有超过此值也需保 存数据</string>
    <string name="str_hr_monitor_hint4">非运动模式血氧自动测量的采样间隔时间(秒),\n 为-1表示不自 动测量</string>
    <string name="str_title">标题</string>
    <string name="str_content">内容</string>
    <string name="str_content_hint">是否突出 1突出</string>
    <string name="str_content_hint1">包名，比如 QQ包名：com.tencent.mobileqq，微信包名： com.tencent.mm</string>
    <string name="str_is_highlight">是否突出</string>
    <string name="str_add">添加</string>
    <string name="str_update">修改</string>
    <string name="str_delete">删除</string>
    <string name="str_show_result">展示结果</string>
    <string name="str_add_config">添加配置项</string>
    <string name="str_time">提醒时间</string>
    <string name="str_time1">最近要响时间</string>
    <string name="str_remind_hint1">日程循环方式</string>
    <string name="str_pick_ota_file">选择OTA文件</string>
    <string name="str_trans_ota_file">传输OTA文件</string>
    <string name="str_pick_dial_file">选择壁纸图片</string>
    <string name="str_genrate_dial">生成壁纸文件</string>
    <string name="str_trans_dial">传输壁纸文件</string>
    <string name="str_set_user">设置用户信息</string>
    <string name="str_find_phone">寻找手机</string>
    <string name="str_close_find_phone">关闭寻找手机</string>
    <string name="str_open_music">打开音乐控制</string>
    <string name="str_close_music">关闭音乐控制</string>
    <string name="str_get_realtime_hr_data">获取实时心率数据</string>
    <string name="str_get_realtime_spo_data">获取实时血氧数据</string>
    <string name="str_send_message">发送自定义消息</string>
    <string name="str_open_notify">打开消息总开关</string>
    <string name="str_query_notify">获取消息通知APP列表</string>
    <string name="str_add_notify">新增APP通知</string>
    <string name="str_update_notify">修改APP通知开关</string>
    <string name="str_close_notify">关闭消息通知总开关</string>

    <string name="str_contact">获取手表通讯录</string>
    <string name="str_contact_set">设置手表通讯录</string>
    <string name="str_payer_time">穆斯林</string>
    <string name="str_payer_gps_time">穆斯林-gps</string>
    <string name="str_more_device">多设备切换</string>
</resources>
