<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WomenHealthActivity">

    <TextView
        android:id="@+id/backTv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/str_back" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/openCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_is_open" />

    <EditText
        android:id="@+id/preDayTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_women_set_hint1"
        android:inputType="number" />

    <EditText
        android:id="@+id/pre1DayTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_women_set_hint2"
        android:inputType="number" />

    <EditText
    android:id="@+id/hourTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:hint="@string/str_women_set_hint3"
    android:inputType="number" />

    <EditText
        android:id="@+id/minTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_women_set_hint4"
        android:inputType="number" />

    <EditText
        android:id="@+id/yearTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_women_set_hint5"
        android:inputType="number" />

    <EditText
    android:id="@+id/monthTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:hint="@string/str_women_set_hint6"
    android:inputType="number" />

    <EditText
        android:id="@+id/dayTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_women_set_hint7"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/womenDayTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_women_set_hint8"
            android:inputType="number" />
        <EditText
            android:id="@+id/weekTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_women_set_hint9"
            android:inputType="number" />
    </LinearLayout>
    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/str_set" />


</LinearLayout>