<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LongSitActivity">

    <TextView
        android:id="@+id/backTv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/str_back" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/openCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_is_open" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/startHourTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_start_hour"
            android:inputType="number" />

        <EditText
            android:id="@+id/startMinTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_start_min"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/endHourTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_end_hour"
            android:inputType="number" />

        <EditText
            android:id="@+id/endMinTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="@string/str_end_min"
            android:inputType="number" />
    </LinearLayout>

    <EditText
        android:id="@+id/longSitMinTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_long_sit_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/longStepMinTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_long_step_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/longRemindTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_long_remind"
        android:inputType="number" />

    <EditText
        android:id="@+id/longCountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_long_count"
        android:inputType="number" />

    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:text="@string/str_set"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>

</LinearLayout>