<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NodisturbActivity">

    <TextView
        android:id="@+id/backTv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/str_back" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/openCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_is_open" />

    <EditText
        android:id="@+id/beginHourTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_start_hour"
        android:inputType="number" />

    <EditText
        android:id="@+id/beginMinTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_start_min"
        android:inputType="number" />

    <EditText
        android:id="@+id/endHourTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_end_hour"
        android:inputType="number" />

    <EditText
        android:id="@+id/endMinTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/str_end_min"
        android:inputType="number" />

    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/str_set" />

</LinearLayout>