<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/device_mac_hint" />

        <TextView
            android:id="@+id/deviceMacTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/connect_status" />

        <TextView
            android:id="@+id/connectStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="10dp" />



    </LinearLayout>
    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:text="@string/str_clear_show"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/str_show_result"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/showTv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/optionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>