<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:text="分享"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="wrap_content"
            android:text="@string/str_scan"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_stop_scan"
            android:layout_height="wrap_content"/>



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/str_device_list"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deviceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>